src/objects/Harvest_Time_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Created_At__c</fullName>
        <label>Created At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Harvest_Id__c</fullName>
        <externalId>true</externalId>
        <label>Harvest ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Harvest_User_Id__c</fullName>
        <externalId>true</externalId>
        <label>User</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Harvest_Project__c</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Harvest_Time_Entries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Spent_at__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task</label>
        <referenceTo>Harvest_Task__c</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Harvest_Time_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Timer_Started_At__c</fullName>
        <label>Timer Started At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Updated_At__c</fullName>
        <label>Updated At</label>
        <type>DateTime</type>
    </fields>
    <label>Harvest Time Entry</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
    </listViews>
    <nameField>
        <displayFormat>TE-{000000}</displayFormat>
        <label>Harvest Time Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Harvest Time Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>